<resources>
    <string name="app_name">DBS News App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="caption">CAPTION</string>
    <string name="title">TITLE</string>
    <string name="writer">WRITER</string>
    <string name="datetime">DATETIME</string>
    <string name="imageview">ImageView</string>
</resources>